fix: Update dependencies and import paths
Updated the `@google/genai` dependency to `1.3.1` and aligned React/ReactDOM versions in `package.json` and `index.html`. Adjusted import paths in `.tsx` and `.ts` files to use `.tsx` and `.ts` extensions for clarity and consistency.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
+[build]
+  publish = "."
+  command = "true"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build]
-  publish = "."
-  command = "echo 'Deploying LyricsSync AI'"
